--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.13.6",
+    "lodash.bindall": "^4.4.0",
     "react": "^16.8.3",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-localization": "^1.0.13",
+    "react-scripts": "2.1.5",
+    "scratch-blocks": "0.1.0-prerelease.1549990124"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
